include/pr/view3d/dll/view3d.h

	struct View3DVertex;
	struct View3DWindowOptions;
	using View3DColour = unsigned int;
	using View3D_ReportErrorCB = void (__stdcall *)(void* ctx, wchar_t const* msg, wchar_t const* filepath, int line, int64_t pos);
	enum class EView3DLogLevel :int
	{
		Debug,
		Info,
		Warn,
		Error,
	};
	enum class EView3DColourOp :int // pr::ldr::EColourOp
	{
		Overwrite,
		Add,
		Subtract,
		Multiply,
		Lerp,
	};
	enum class EView3DSourcesChangedReason :int
	{
		NewData,
		Reload,
		Removal,
	};
	struct View3DVertex
	{
		View3DV4 pos;
		View3DV4 norm;
		View3DV2 tex;
		View3DColour col;
		UINT32 pad;
	};
	struct View3DNugget
	{
		EView3DTopo       m_topo;
		EView3DGeom       m_geom;
		EView3DCullMode   m_cull_mode;
		EView3DFillMode   m_fill_mode;
		UINT32            m_v0, m_v1;       // Vertex buffer range. Set to 0,0 to mean the whole buffer
		UINT32            m_i0, m_i1;       // Index buffer range. Set to 0,0 to mean the whole buffer
		EView3DNuggetFlag m_nflags;         // Nugget flags
		BOOL              m_range_overlaps; // True if the nugget V/I range overlaps earlier nuggets
		View3DMaterial    m_mat;
	};
	struct View3DWindowOptions
	{
		View3D_ReportErrorCB m_error_cb;
		void*                m_error_cb_ctx;
		BOOL                 m_gdi_compatible_backbuffer;
		int                  m_multisampling;
		char const*          m_dbg_name;
	};
	struct View3DSceneChanged
	{
		// How the scene was changed
		EView3DSceneChanged m_change_type;

		// An array of the context ids that changed
		GUID const* m_ctx_ids;

		// The length of the 'm_ctx_ids' array
		int m_count;

		// Pointer to the object that changed (for single object changes only)
		View3DObject m_object;
	};
	using View3D_SettingsChangedCB     = void (__stdcall *)(void* ctx, View3DWindow window, EView3DSettings setting);
	using View3D_AddFileProgressCB     = void (__stdcall *)(void* ctx, GUID const& context_id, wchar_t const* filepath, long long file_offset, BOOL complete, BOOL* cancel);
	using View3D_OnAddCB               = void (__stdcall *)(void* ctx, GUID const& context_id, BOOL before);
	using View3D_SourcesChangedCB      = void (__stdcall *)(void* ctx, EView3DSourcesChangedReason reason, BOOL before);
	using View3D_InvalidatedCB         = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_RenderCB              = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_SceneChangedCB        = void (__stdcall *)(void* ctx, View3DWindow window, View3DSceneChanged const&);
	using View3D_AnimationCB           = void (__stdcall *)(void* ctx, View3DWindow window, EView3DAnimCommand command, double clock);
	using View3D_GizmoMovedCB          = void (__stdcall *)(void* ctx, View3DGizmo gizmo, EView3DGizmoState state);
	using View3D_EditObjectCB          = void (__stdcall *)(
		void* ctx,             // User callback context pointer
		UINT32 vcount,         // The maximum size of 'verts'
		UINT32 icount,         // The maximum size of 'indices'
		UINT32 ncount,         // The maximum size of 'nuggets'
		View3DVertex* verts,   // The vert buffer to be filled
		UINT16* indices,       // The index buffer to be filled
		View3DNugget* nuggets, // The nugget buffer to be filled
		UINT32& new_vcount,    // The number of verts in the updated model
		UINT32& new_icount,    // The number indices in the updated model
		UINT32& new_ncount);   // The number nuggets in the updated model
	// Context
	VIEW3D_API View3DContext __stdcall View3D_Initialise            (View3D_ReportErrorCB initialise_error_cb, void* ctx, D3D11_CREATE_DEVICE_FLAG device_flags);
	VIEW3D_API void          __stdcall View3D_Shutdown              (View3DContext context);
	VIEW3D_API void          __stdcall View3D_GlobalErrorCBSet      (View3D_ReportErrorCB error_cb, void* ctx, BOOL add);
	VIEW3D_API void          __stdcall View3D_SourceEnumGuids       (View3D_EnumGuidsCB enum_guids_cb, void* ctx);
	VIEW3D_API void          __stdcall View3D_ReloadScriptSources   ();
	VIEW3D_API void          __stdcall View3D_CheckForChangedSources();
	VIEW3D_API void          __stdcall View3D_AddFileProgressCBSet  (View3D_AddFileProgressCB progress_cb, void* ctx, BOOL add);
	VIEW3D_API void          __stdcall View3D_SourcesChangedCBSet   (View3D_SourcesChangedCB sources_changed_cb, void* ctx, BOOL add);
	VIEW3D_API void          __stdcall View3D_EmbeddedCodeCBSet     (wchar_t const* lang, View3D_EmbeddedCodeHandlerCB embedded_code_cb, void* ctx, BOOL add);
	VIEW3D_API BOOL          __stdcall View3D_ContextIdFromFilepath (wchar_t const* filepath, GUID& id);
	// Windows
	VIEW3D_API View3DWindow   __stdcall View3D_WindowCreate             (HWND hwnd, View3DWindowOptions const& opts);
	VIEW3D_API void           __stdcall View3D_WindowDestroy            (View3DWindow window);
	VIEW3D_API void           __stdcall View3D_WindowErrorCBSet         (View3DWindow window, View3D_ReportErrorCB error_cb, void* ctx, BOOL add);
	VIEW3D_API wchar_t const* __stdcall View3D_WindowSettingsGet        (View3DWindow window);
	VIEW3D_API void           __stdcall View3D_WindowSettingsSet        (View3DWindow window, wchar_t const* settings);
	VIEW3D_API void           __stdcall View3D_WindowSettingsChangedCB  (View3DWindow window, View3D_SettingsChangedCB settings_changed_cb, void* ctx, BOOL add);
	VIEW3D_API void           __stdcall View3D_WindowRenderingCB        (View3DWindow window, View3D_RenderCB rendering_cb, void* ctx, BOOL add);
	VIEW3D_API void           __stdcall View3D_WindowSceneChangedCB     (View3DWindow window, View3D_SceneChangedCB scene_changed_cb, void* ctx, BOOL add);
	VIEW3D_API void           __stdcall View3D_WindowAddObject          (View3DWindow window, View3DObject object);
	VIEW3D_API void           __stdcall View3D_WindowRemoveObject       (View3DWindow window, View3DObject object);
	VIEW3D_API void           __stdcall View3D_WindowAddGizmo           (View3DWindow window, View3DGizmo giz);
	VIEW3D_API void           __stdcall View3D_WindowRemoveGizmo        (View3DWindow window, View3DGizmo giz);
	// Miscellaneous
	VIEW3D_API void       __stdcall View3D_Flush                    ();
	VIEW3D_API BSTR       __stdcall View3D_ExampleScriptBStr        ();
	VIEW3D_API BSTR       __stdcall View3D_AutoCompleteTemplatesBStr();
	VIEW3D_API BSTR       __stdcall View3D_ObjectAddressAt          (wchar_t const* ldr_script, int64_t position);