projects/rylogic/Rylogic.Gfx/src/Gfx/View3d.cs


		/// <summary>
		/// Add objects from an ldr file. This will create all objects declared in 'ldr_script'
		/// with context id 'context_id' if given, otherwise an id will be created.
		/// 'include_paths' is a list of include paths to use to resolve #include directives (or null).</summary>
		public Guid LoadScriptFromFile(string ldr_script_file, Guid? context_id = null, string[]? include_paths = null, LoadScriptCompleteCB? on_add = null)
		{
			// Note: this method is asynchronous, it returns before objects have been added to the object manager
			// in view3d. The 'on_add' callback should be used to add objects to windows once they are available.
			var ctx = context_id ?? Guid.NewGuid();
			if (on_add != null) m_load_script_handlers.Add(on_add);
			var on_add_ctx = on_add != null ? Marshal.GetFunctionPointerForDelegate(on_add) : IntPtr.Zero;
			var inc = new Includes { m_include_paths = string.Join(",", include_paths ?? Array.Empty<string>()) };
			return View3D_LoadScriptFromFile(ldr_script_file, ref ctx, ref inc, m_on_add_cb, on_add_ctx);
		}

		/// <summary>Force a reload of all script sources</summary>
		public void ReloadScriptSources()
		{
			View3D_ReloadScriptSources();
		}

		/// <summary>Poll for changed script source files, and reload any that have changed. (designed as a Timer.Tick handler)</summary>
		public void CheckForChangedSources(object? sender = null, EventArgs? args = null)
		{
			View3D_CheckForChangedSources();
		}

		/// <summary>
		/// Delete all objects
		/// *WARNING* Careful with this function, make sure all C# references to View3D objects have been set to null
		/// otherwise, disposing them will result in memory corruption</summary>
		public void DeleteAllObjects()
		{
			View3D_DeleteAllObjects();
		}

		/// <summary>Delete all objects, filtered by 'context_ids'</summary>
		public void DeleteObjects(Guid[] context_ids, int include_count, int exclude_count)
		{
			Debug.Assert(include_count + exclude_count == context_ids.Length);
			using var ids = Marshal_.Pin(context_ids, GCHandleType.Pinned);
			View3D_DeleteById(ids.Pointer, include_count, exclude_count);
		}

		/// <summary>Release all objects not displayed in any windows (filtered by 'context_ids')</summary>
		public void DeleteUnused(Guid[] context_ids, int include_count, int exclude_count)
		{
			Debug.Assert(include_count + exclude_count == context_ids.Length);
			using var ids = Marshal_.Pin(context_ids, GCHandleType.Pinned);
			View3D_DeleteUnused(ids.Pointer, include_count, exclude_count);
		}

		/// <summary>Return the context id for objects created from file 'filepath' (or null if 'filepath' is not an existing source)</summary>
		public Guid? ContextIdFromFilepath(string filepath)
		{
			return View3D_ContextIdFromFilepath(filepath, out var id) ? id : (Guid?)null;
		}

		/// <summary>Enumerate the GUIDs in the store</summary>
		public void EnumGuids(Action<Guid> cb)
		{
			EnumGuids(guid => { cb(guid); return true; });
		}
		public void EnumGuids(Func<Guid, bool> cb)
		{
			EnumGuidsCB enum_guids_cb = (IntPtr ctx, ref Guid guid) => cb(guid);
			View3D_SourceEnumGuids(enum_guids_cb, IntPtr.Zero);
		}

		/// <summary>Return the example Ldr script</summary>
		public static string ExampleScript => View3D_ExampleScriptBStr();

		/// <summary>Template descriptions for auto complete of LDraw script</summary>
		public static string AutoCompleteTemplates => View3D_AutoCompleteTemplatesBStr();

		/// <summary>Boilerplate C# code used for embedded C#</summary>
		public string EmbeddedCSharpBoilerPlate { get; set; }
		public static string EmbeddedCSharpBoilerPlateDefault =>
		#region Embedded C# Source
$@"//
//Assembly: netstandard.dll
//Assembly: System.dll
//Assembly: System.Drawing.dll
//Assembly: System.IO.dll
//Assembly: System.Linq.dll
//Assembly: System.Runtime.dll
//Assembly: System.Runtime.Extensions.dll
//Assembly: System.ValueTuple.dll
//Assembly: System.Xml.dll
//Assembly: System.Xml.Linq.dll
//Assembly: .\Rylogic.Core.dll
//Assembly: .\Rylogic.Core.Windows.dll
//Assembly: .\Rylogic.Gfx.dll
using System;
using System.Drawing;
using System.IO;
using System.Linq;
using System.Text;
using System.Text.RegularExpressions;
using System.Xml;
using System.Xml.Linq;
using Rylogic.Common;
using Rylogic.Container;
using Rylogic.Extn;
using Rylogic.Gfx;
using Rylogic.LDraw;
using Rylogic.Maths;
using Rylogic.Utility;

namespace ldr
{{
	public class Main
	{{
		private StringBuilder Out = new StringBuilder();
		<<<support>>>

		public string Execute()
		{{
			<<<code>>>
			return Out.ToString();
		}}
	}}
}}
";
		#endregion

		/// <summary>Return the address (form: keyword.keyword...) within a script at 'position'</summary>
		public static string AddressAt(string ldr_script, long position = -1)
		{
			// 'script' should start from a root level position.
			// 'position' should be relative to 'script'
			return View3D_ObjectAddressAt(ldr_script, position != -1 ? position : ldr_script.Length) ?? string.Empty;
		}

		///// <summary>Flush any pending commands to the graphics card</summary>
		//public static void Flush()
		//{
		//	View3D_Flush();
		//}

		#region DLL extern functions

		private const string Dll = "view3d-12";

		/// <summary>True if the view3d dll has been loaded</summary>
		public static bool ModuleLoaded => m_module != IntPtr.Zero;
		private static IntPtr m_module = IntPtr.Zero;

		/// <summary>The exception created if the module fails to load</summary>
		public static System.Exception? LoadError;

		/// <summary>Helper method for loading the view3d.dll from a platform specific path</summary>
		public static bool LoadDll(string dir = @".\lib\$(platform)\$(config)", bool throw_if_missing = true)
		{
			if (ModuleLoaded) return true;
			m_module = Win32.LoadDll(Dll + ".dll", out LoadError, dir, throw_if_missing);
			return m_module != IntPtr.Zero;
		}

		// Dll Context ****************************

		// Initialise calls are reference counted and must be matched with Shutdown calls
		// 'initialise_error_cb' is used to report dll initialisation errors only (i.e. it isn't stored)
		// Note: this function is not thread safe, avoid race calls
		[DllImport(Dll)] private static extern HContext View3D_Initialise(ReportErrorCB global_error_cb, IntPtr ctx);
		[DllImport(Dll)] private static extern void View3D_Shutdown(HContext context);

		// This error callback is called for errors that are associated with the dll (rather than with a window).
		[DllImport(Dll)] private static extern void View3D_GlobalErrorCBSet(ReportErrorCB error_cb, IntPtr ctx, bool add);

		// Set the callback for progress events when script sources are loaded or updated
		[DllImport(Dll)] private static extern void View3D_AddFileProgressCBSet(AddFileProgressCB progress_cb, IntPtr ctx, bool add);

		// Set the callback that is called when the sources are reloaded
		[DllImport(Dll)] private static extern void View3D_SourcesChangedCBSet(SourcesChangedCB sources_changed_cb, IntPtr ctx, bool add);

		// Add/Remove a callback for handling embedded code within scripts
		[DllImport(Dll)] private static extern void View3D_EmbeddedCodeCBSet([MarshalAs(UnmanagedType.LPWStr)] string lang, EmbeddedCodeHandlerCB embedded_code_cb, IntPtr ctx, bool add);

		// Return the context id for objects created from 'filepath' (if filepath is an existing source)
		[DllImport(Dll)] private static extern bool View3D_ContextIdFromFilepath([MarshalAs(UnmanagedType.LPWStr)] string filepath, out Guid id);

		// Data Sources ***************************

		// Add an ldr script source. This will create all objects with context id 'context_id' (if given, otherwise an id will be created). Concurrent calls are thread safe.
		[DllImport(Dll)] private static extern Guid View3D_LoadScriptFromString([MarshalAs(UnmanagedType.LPStr)] string ldr_script, ref Guid context_id, ref Includes includes, OnAddCB? on_add_cb, IntPtr ctx);
		[DllImport(Dll)] private static extern Guid View3D_LoadScriptFromFile([MarshalAs(UnmanagedType.LPStr)] string ldr_file, ref Guid context_id, ref Includes includes, OnAddCB? on_add_cb, IntPtr ctx);
		
		// Delete all objects and object sources
		[DllImport(Dll)] private static extern void View3D_DeleteAllObjects();
		
		// Delete all objects matching (or not matching) a context id
		[DllImport(Dll)] private static extern void View3D_DeleteById(IntPtr context_ids, int include_count, int exclude_count);

		// Delete all objects not displayed in any windows
		[DllImport(Dll)] private static extern void View3D_DeleteUnused(IntPtr context_ids, int include_count, int exclude_count);

		// Enumerate the GUIDs of objects in the sources collection
		[DllImport(Dll)] private static extern void View3D_SourceEnumGuids(EnumGuidsCB enum_guids_cb, IntPtr ctx);

		// Reload script sources. This will delete all objects associated with the script sources then reload the files creating new objects with the same context ids.
		[DllImport(Dll)] private static extern void View3D_ReloadScriptSources();

		// Poll for changed script sources and reload any that have changed
		[DllImport(Dll)] private static extern void View3D_CheckForChangedSources();

		// Windows ********************************

		// Create/Destroy a window
		[DllImport(Dll)] private static extern HWindow View3D_WindowCreate(HWND hwnd, ref WindowOptions opts);
		[DllImport(Dll)] private static extern void View3D_WindowDestroy(HWindow window);

		// Add/Remove a window error callback. Note: The callback function can be called in a worker thread context.
		[DllImport(Dll)] private static extern void View3D_WindowErrorCBSet(HWindow window, ReportErrorCB error_cb, IntPtr ctx, bool add);

		// Get/Set the window settings (as ldr script string)
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.LPWStr)] private static extern string View3D_WindowSettingsGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowSettingsSet(HWindow window, [MarshalAs(UnmanagedType.LPWStr)] string settings);

		// Get/Set the dimensions of the render target. Note: Not equal to window size for non-96 dpi screens!
		// In set, if 'width' and 'height' are zero, the RT is resized to the associated window automatically.
		[DllImport(Dll)] private static extern Size View3D_WindowBackBufferSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowBackBufferSizeSet(HWindow window, Size size);

		// Get/Set the window viewport (and clipping area)
		[DllImport(Dll)] private static extern Viewport View3D_WindowViewportGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowViewportSet(HWindow window, ref Viewport vp);

		// Set a notification handler for when a window setting changes
		[DllImport(Dll)] private static extern void View3D_WindowSettingsChangedCB(HWindow window, SettingsChangedCB settings_changed_cb, IntPtr ctx, bool add);

		// Add/Remove a callback that is called when the collection of objects associated with 'window' changes
		[DllImport(Dll)] private static extern void View3D_WindowSceneChangedCB(HWindow window, SceneChangedCB scene_changed_cb, IntPtr ctx, bool add);

		// Add/Remove a callback that is called just prior to rendering the window
		[DllImport(Dll)] private static extern void View3D_WindowRenderingCB(HWindow window, RenderingCB rendering_cb, IntPtr ctx, bool add);

		// Add/Remove an object to/from a window
		[DllImport(Dll)] private static extern void View3D_WindowAddObject(HWindow window, HObject obj);
		[DllImport(Dll)] private static extern void View3D_WindowRemoveObject(HWindow window, HObject obj);

		// Add/Remove a gizmo to/from a window
		[DllImport(Dll)] private static extern void View3D_WindowAddGizmo(HWindow window, HGizmo giz);
		[DllImport(Dll)] private static extern void View3D_WindowRemoveGizmo(HWindow window, HGizmo giz);
